A-n-6. more optimized in detail from step5.SWAR